--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,6 @@
 
 body {
     box-sizing: border-box;
-    /* height: 100vh; */
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
 }
@@ -34,7 +33,7 @@ body {
 
 .cabecalho__menu__link{
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -58,7 +57,7 @@ body {
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -67,13 +66,13 @@ body {
 
 .apresentacao__conteudo__titulo {
 
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto{
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links {
@@ -93,14 +92,14 @@ body {
 
 
 .apresentacao__links__link {
-     display: flex ;
+    display: flex ;
     justify-content: center;
     gap: 16px;
     border: 7px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--cor-secundaria);
@@ -114,10 +113,8 @@ body {
 }
 
 .imagem {
-    width: 615px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 50% ;
+
 }
 
 .rodape{
@@ -127,4 +124,24 @@ body {
     text-align: center;
     font-family: var(--fonte-secundaria);
     font-weight: 1000;
+}
+
+@media(max-width: 1200px){
+
+    .cabecalho{
+        padding: 10% ;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
+
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+    }
 }
